# UiO-IN3110

./: README.md
assignment1/: friendly_greeting.txt  gitconflict.txt  myfirstcommit.txt
assignment2/: README.md  array_class.py  test_array.py
assignment3/assignment3/: README.md  pyproject.toml
assignment3/assignment3/instapy/: __main__.py  cli.py  cython_filters.html  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/assignment3/test/: conftest.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  collect_dates.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  time_planner.py
assignment5/: README.md  app.py  strompris.py
assignment5/docs/: conf.py
assignment5/docs/_build/doctrees/: environment.pickle  index.doctree
assignment5/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
assignment5/docs/_build/html/_sources/: index.rst.txt
assignment5/templates/: strompris.html
